Stop navbar from collapse after click/ big screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,16 +164,18 @@ p {
 }
 
 /* Collapsible */
-.collapsible__content {
-  max-height: 0;
-  overflow: hidden;
-  opacity: 1;
-  transition: all 0.3s;
-}
-
 .collapsible--expanded .collapsible__content {
   max-height: 100vh;
   opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .collapsible__content {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 1;
+    transition: all 0.3s;
+  }
 }
 
 /* Hero Section */
